[package]
name = "echoreq"
version = "1.0.0"
edition = "2021"

exclude = [
    "demo.png",
    "demo.txt",
]

[dependencies]
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
fastrand = "2.0.1"
http = "1.0.0"
reqwest = { version = "0.11.23", features = ["multipart"] }
tower = "0.4.13"
