[package]
name = "echoreq"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Simple webserver to echo http requests -- headers, etc, including multipart form-data (binary converted to printable chars). For testing!"
repository = "https://github.com/rogusdev/echoreq"
keywords = ["echo", "http", "requests", "json", "multipart"]
categories = ["HTTP server", "Testing", "Command line utilities"]

exclude = [
    "demo.png",
    "demo.txt",
]

[dependencies]
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
fastrand = "2.0.1"
http = "1.0.0"
reqwest = { version = "0.11.23", features = ["multipart"] }
tower = "0.4.13"
